--- a/style.css
+++ b/style.css
@@ -1,16 +1,17 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Merriweather'
+    font-family: 'Fjalla One'
 }
 
 html {
-  
+
 }
 
 body {
   display: flex;
   flex-direction: row;
+  width: 100%;
   min-height: 100vh;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -18,54 +19,94 @@ body {
 }
 
 .sidebar{
+  display: flex;
+  flex: 1;
   order: 1;
   min-height: 100vh;
-  flex-basis: 20%
+  width: 20%;
   flex-direction: column;
+  justify-content: space-between;
   margin-left: 3%;
   margin-top: 3%;
 }
 
-.menu{
+#menu{
   flex: 1;
   position: fixed;
 }
 
-.menu ul{
+#menu ul{
   text-align: left;
 }
 
-.menu ul li{
+#menu ul li{
   vertical-align: middle;
   list-style: none;
-}
-
-.menu ul li a{
   text-decoration: none;
   font-size: 25px;
   color: black;
   font-weight: bold;
+  background-color: white;
+  padding-right: 5%;
+  padding-left: 5%;
 }
 
-.menu ul li a:hover{
+#menu ul li a{
+  text-decoration: none;
+  color: black;
+}
+
+#menu ul li a:hover{
   background-color: black;
   color: white;
+}
+
+#menu li:hover .submenu {
+  display: block;
+  max-height: 200px;
+}
+
+.submenu{
+  list-style: none;
+  overflow: hidden;
+  max-height: 0;
+  -webkit-transition: all 0.5s ease-out;
+}
+
+.submenu li a{
+  font-size: 20px;
+}
+
+.socials{
+  bottom: 40px;
+  position: fixed;
+}
+
+.socials a{
+  text-decoration: none;
+  color: black;
+}
+
+.socials a:hover{
+  text-decoration: underline;
 }
 
 .wrap{
   display: flex;
   order: 2;
-  flex-basis: 80%;
+  flex: 5;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex;
   font-weight: bold;
 
 }
 
 .header{
-  font-size: 70px;
-  margin-right: 5%;
+  display: flex;
+  font-size: 8vw;
+  align-self: center;
   text-align: center;
+  justify-content: center;
 }
 
 #carousel{
@@ -76,22 +117,32 @@ body {
   align-content: center;
 }
 
+.infobox{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  font-weight: normal;
+}
+
 .imgwrap{
-  display: block;
-  margin-bottom: 5%;
-  margin-right: 3%;
+  display: flex;
   position: relative;
+  padding-bottom: 5%;
+  justify-content: center;
 }
 
 .imgwrap img{
-  width: 750px;
+  object-fit: contain;
+  max-width: 80%;
+  height: auto;
 }
 
 .imgcaption{
   display: none;
-  top: 10px;
-  left: 15px;
-  font-size: 60px;
+  top: 20px;
+  font-size: 30px;
   color: white;
   position: absolute;
 }
